objects/ChargentOrders__Email_Notification__c.object
<CustomObject>
    <fields>
        <fullName>ChargentOrders__Account_Updater_Link_Formatted__c</fullName>
        <formula>HYPERLINK( ChargentOrders__Account_Updater_Link__c , &apos;Account Updater Link&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Updater Link Formatted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Account_Updater_Link__c</fullName>
        <label>Account Updater Link</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__ChargentOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>ChargentOrders__ChargentOrder__c</referenceTo>
        <relationshipLabel>Email Notifications</relationshipLabel>
        <relationshipName>Email_Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__First_Name__c</fullName>
        <formula>ChargentOrders__ChargentOrder__r.ChargentOrders__Billing_First_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Last_Name__c</fullName>
        <formula>ChargentOrders__ChargentOrder__r.ChargentOrders__Billing_Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Notification_Message__c</fullName>
        <label>Notification Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Related_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Transaction</label>
        <referenceTo>ChargentOrders__Transaction__c</referenceTo>
        <relationshipLabel>Email Notifications (Related Transaction)</relationshipLabel>
        <relationshipName>Related_Unresolved_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Updater</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Unresolved Transaction</fullName>
                </value>
                <value>
                    <fullName>Payment Request Debug</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargentOrders__Transaction_JSON__c</fullName>
        <label>Transaction JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction</label>
        <referenceTo>ChargentOrders__Transaction__c</referenceTo>
        <relationshipLabel>Email Notifications</relationshipLabel>
        <relationshipName>Email_Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Unresolved_Transaction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unresolved Transaction</label>
        <type>Checkbox</type>
    </fields>
    <label>Email Notification</label>
    <nameField>
        <displayFormat>NT-{0000000}</displayFormat>
        <label>Email Notification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>